--- a/mpmf-server/views/reconfig.ejs
+++ b/mpmf-server/views/reconfig.ejs
@@ -26,7 +26,10 @@
 <body>
     <%- include ('partials/navbar-head') %>
 
-    
+    <div class="container-fluid" id="grid"></div>
+    <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
