--- a/mpmf-server/views/config.ejs
+++ b/mpmf-server/views/config.ejs
@@ -25,9 +25,11 @@
 
 <body>
     <%- include ('partials/navbar-config') %>
-
-    
-
+    <div class="container-fluid" id="grid"></div>
+    <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
+ 
 </body>
 
 </html>
