--- a/mpmf-server/views/custom.ejs
+++ b/mpmf-server/views/custom.ejs
@@ -36,7 +36,10 @@
         <%- include ('partials/navbar-head') %>
       <% } %>
 
-    
+    <div class="container-fluid" id="grid"></div>
+    <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
