--- a/mpmf-server/views/index.ejs
+++ b/mpmf-server/views/index.ejs
@@ -30,6 +30,9 @@
     <div class="container-fluid" id="grid">
         
     </div>
+    <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
