--- a/mpmf-server/views/no-data.ejs
+++ b/mpmf-server/views/no-data.ejs
@@ -43,6 +43,9 @@
         
         
     </div>
+    <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
