--- a/mpmf-server/views/process.ejs
+++ b/mpmf-server/views/process.ejs
@@ -31,7 +31,13 @@
     <% if (type == 'main') { %>
         <%- include ('partials/navbar-head') %>
       <% } %>
-    
+      
+    <div class="container-fluid" id="grid">
+        
+    </div>
+    <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
 
 </body>
 
