--- a/mpmf-server/views/user.ejs
+++ b/mpmf-server/views/user.ejs
@@ -46,6 +46,9 @@
           </div>
         </div>
 
+        <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
+        <a href="#" target="_blank"> More Information</a>
+    </footer>
         
 
 </body>
