--- a/mpmf-server/views/user.ejs
+++ b/mpmf-server/views/user.ejs
@@ -47,7 +47,7 @@
         </div>
 
         <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
-        <a href="#" target="_blank"> More Information</a>
+        <a href="#" target="_blank" data-info=<%- type %>> More Information</a>
     </footer>
         
 
