--- a/mpmf-server/views/config.ejs
+++ b/mpmf-server/views/config.ejs
@@ -27,7 +27,7 @@
     <%- include ('partials/navbar-config') %>
     <div class="container-fluid" id="grid"></div>
     <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
-        <a href="#" target="_blank"> More Information</a>
+        <a href="#" target="_blank" data-info="config"> More Information</a>
     </footer>
  
 </body>
