--- a/mpmf-server/views/custom.ejs
+++ b/mpmf-server/views/custom.ejs
@@ -38,7 +38,7 @@
 
     <div class="container-fluid" id="grid"></div>
     <footer class="footer-charts">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
-        <a href="#" target="_blank"> More Information</a>
+        <a href="#" target="_blank" data-info="main"> More Information</a>
     </footer>
 
 </body>
