--- a/mpmf-server/views/index.ejs
+++ b/mpmf-server/views/index.ejs
@@ -31,7 +31,7 @@
         
     </div>
     <footer class="footer-home">Supported by: Monash Proteomics and Metabolomics Platform, Monash University
-        <a href="#" target="_blank"> More Information</a>
+        <a href="#" target="_blank" data-info="main"> More Information</a>
     </footer>
 
 </body>
