--- a/mpmf-server/views/info.ejs
+++ b/mpmf-server/views/info.ejs
@@ -38,7 +38,7 @@
           <div class="row justify-content-center" style="height:100vh">
             <div class="col-sm-2 side-bar-info"></div>
             <div class="col-sm-8 text-center">
-              <pre>
+              <pre class="info">
 
 
               <strong>MaSpeQC - Quality control software for LC-MS/MS instrumentation</strong>
