--- a/mpmf-server/public/stylesheets/style.css
+++ b/mpmf-server/public/stylesheets/style.css
@@ -25,7 +25,7 @@ body{
   font-size: 1.8vh;
 }
 
-pre{
+pre.info{
   font-family:inherit;
   padding-right:10em; /* for alignment, specific to the copyright text */
 }
