--- a/mpmf-server/views/info.ejs
+++ b/mpmf-server/views/info.ejs
@@ -58,6 +58,18 @@
               GNU Affero General Public License for more details.
 
             </pre>
+
+            <p class="info">
+              <strong>MaSpeQC: An easy-to-use Interactive Pipeline to Assess the Performance of LC-MS/MS Instrumentation</strong>
+            </p>
+            <p class="info">
+              Simon J. Caven, Christopher K. Barlow, Robert J. A. Goode, Scott A. Blundell, Hossein Valipour Kahrood, Haijian Zhang, Anup D. Shah, Bosco K. Ho, Michael Wybrow, Tobias Czauderna, and Ralf B. Schittenhelm
+            </p>
+              <i>Journal of Proteome Research Article ASAP</i>
+              DOI:<a href="https://pubs.acs.org/doi/10.1021/acs.jproteome.5c00869" target="_blank">10.1021/acs.jproteome.5c00869</a> 
+            
+          </br>
+          </br>
             <a href="https://github.com/MonashProteomics/MaSpeQC?tab=AGPL-3.0-1-ov-file" target="_blank">View the MaSpeQC License</a><br><br>
             <a href="https://github.com/MonashProteomics/MaSpeQC#software-licenses" target="_blank">View the MaSpeQC Software Licenses</a><br><br>
             <a href="https://github.com/thermofisherlsms/RawFileReader/?tab=readme-ov-file" target="_blank" id="thermo-link">View the RawFileReader License</a><br>
